--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
